finished styling with local host api

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,9 @@
 @import './index.scss';
 @import './delete-action.scss';
 @import './view-book.scss';
+@import './navigation.scss';
+@import './add-book.scss';
+@import './update-book.scss';
+@import './delete-landing.scss';
+
+
