--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -21,6 +21,35 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
+.app {
+    display: flex;
+    justify-content: center;
+}
+
+.link {
+    @include linkStyles();
+}
+
+.header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 3rem;
+}
+
+.space-20 {
+    width: 100%;
+    height: 20px;
+}
 
 
-
+.button {
+    width: 60px;
+    height: 30px;
+    border-radius: 10%;
+    font-size: 1.2rem;
+    border: 1px solid grey;
+    &:focus {
+        outline: 0;
+        box-shadow: 0px 0px 2px 1px grey;
+    }
+}
