--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 65vw;
 }
 
 
@@ -45,6 +46,12 @@
 
 .title {
     font-size: 3em;
-    font-family: 'Yrsa', serif;
+    font-family: $bookFont;
     letter-spacing: 1px;
+}
+
+.author {
+    font-size: 2em;
+    font-family: $bookFont;
+    
 }
