--- a/src/style/view-book.scss
+++ b/src/style/view-book.scss
@@ -1,3 +1,31 @@
 .view-book-wrapper {
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items:center;  
+    
+    .view-book-container {
+        display: flex;
+        justify-content: space-around;
+
+        .left-side {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items:center;  
+            margin-left: 25px;
+        }
+
+        .right-side {
+            display: flex;
+            margin-left: 35px;
+            padding-top: 20px;
+            writing-mode: vertical-rl;
+            text-orientation: mixed;
+            font-size: 1.5rem;
+        }
+    }
 }
+
+
+
