now mobile compatible

--- a/src/style/media-queries.scss
+++ b/src/style/media-queries.scss
@@ -6,6 +6,10 @@
         margin-left: 0px;
     }
 
+    .book-container {
+        width: 90vw;
+    }
+
     .title {
         font-size: 2rem;
     }
