--- a/src/style/media-queries.scss
+++ b/src/style/media-queries.scss
@@ -7,7 +7,10 @@
     }
 
     .book-container {
-        width: 90vw;
+        width: 100vw;
+        border: none;
+        border-top: 2px solid grey;
+        border-bottom: 2px solid grey;
     }
 
     .title {
