now mobile compatible

--- a/src/style/media-queries.scss
+++ b/src/style/media-queries.scss
@@ -7,10 +7,11 @@
     }
 
     .book-container {
-        width: 100vw;
-        border: none;
-        border-top: 2px solid grey;
-        border-bottom: 2px solid grey;
+        width: 90vw;
+    }
+
+    .view-book-link-wrapper {
+        margin-right: 15px;
     }
 
     .title {
